# popstar-solver

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  agent_worklog.md  color2txt.py  example_board.txt  solver_analysis.md
cpp/: Makefile  original_popstar_ai.cpp  popstar_ai.cpp
popstar_solver/: Cargo.toml  heuristic_console_output.txt  misps_ctb_console.txt  modified_misps_ctb_console.txt
popstar_solver/src/: advanced_solvers.rs  engine.rs  heuristics.rs  lib.rs  solver.rs  utils.rs
scratch/: refactor_arena.py
