[package]
name = "popstar_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }

[[bin]]
name = "human_player"
path = "src/bin/human_player.rs"

[[bin]]
name = "ai_solver"
path = "src/bin/ai_solver.rs"
